--- a/_posts/2020-06-21-newton.md
+++ b/_posts/2020-06-21-newton.md
@@ -1,9 +1,12 @@
 ---
-title: 2020-06-21牛顿法 
-tags: 数值优化
-renderNumberedHeading: true
-grammar_cjkRuby: true
----
+layout: post
+title: 牛顿法
+date: 2020-06-21
+Author: ainokiseki
+categories: 
+tags: [sample, document]
+comments: true
+--- 
 
 
 欢迎使用 **{小书匠}(xiaoshujiang)编辑器**，您可以通过 `小书匠主按钮>模板` 里的模板管理来改变新建文章的内容。
