修改文件: _posts/2021-04-03-Eigen.md

--- a/_posts/2021-04-03-Eigen.md
+++ b/_posts/2021-04-03-Eigen.md
@@ -1,9 +1,12 @@
 ---
-title:Eigen使用心得 
-tags: 新建,模板,小书匠
-renderNumberedHeading: true
-grammar_cjkRuby: true
----
+layout: post
+title: Eigen文档
+date: 2021-04-03
+Author: 天国的爱丽丝
+categories: 
+tags: [eigen]
+comments: true
+--- 
 
 
 ## Vector与Array
